--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -137,6 +137,14 @@ dialog.alreadyrunning.warning=PowerFolder ya esta en funcionamiento\n\nConsejo\:
 dialog.connect.connecting=Conectando
 dialog.connect.connecting_to=Conectando a {0}...
 dialog.connection_problem=Problema de conexi\u00f3n
+##dialog.customsync.autodownloadfromfriends=Autodownload from friends
+##dialog.customsync.autodownloadfromother=Autodownload from others
+##dialog.customsync.minutesbetweenscans=(Maximum) minutes until change detection 
+##dialog.customsync.syncdeletionwithfriends=Synchronize deletion with friends
+##dialog.customsync.syncdeletionwithothers=Synchronize deletion with others
+##dialog.customsync.syncprofilescombo=Default synchronization profile
+##dialog.customsync.text=Select default and / or customize synchronization profile
+##dialog.customsync.title=Choose synchronisation profile
 dialog.fatalerror.title=Error Fatal
 dialog.synchronization.choose=Por favor, elija su acci\u00f3n en
 dialog.synchronization.receive_changes=Recibir Cambios
@@ -147,7 +155,6 @@ dialog.synchronization.title=Sincronizar proyecto
 dialog.unable_to_connect_to_address=No se puede conectar a {0}
 dialog.unable_to_connect_to_member=No se puede conectar a {0}
 dialog.unable_to_open_port=No se puede abrir el puerto local {0}, quiz\u00e1s PowerFolder ya est\u00e9 en funcionamiento
-dialog.updatecheck.developmentversion.noUpdateAvailable=Esta versi\u00f3n (en desarrollo) se encuentra actualizada
 dialog.updatecheck.developmentversion.optionrestart=Reiniciar
 dialog.updatecheck.developmentversion.text=\nSe ha descargado una nueva versi\u00f3n en desarrollo de PowerFolder.\n\n"- Buildtimes -\nEsta versi\u00f3n\: {0}\nNueva versi\u00f3n\: {1}\n\nPor favor, renicie PowerFolder ahora.\n
 dialog.updatecheck.developmentversion.title=Nueva versi\u00f3n en desarrollo
@@ -298,6 +305,7 @@ folderjoin.warning.notempty.text=El directorio para la copia local de la carpeta
 folderjoin.warning.notempty.title=La ubicaci\u00f3n local no est\u00e1 vac\u00eda
 
 folderleave.description=Abandonar esta carpeta (Dejar de compartir o descargar informaci\u00f3n)
+##folderleave.dialog.delete=Delete meta-data
 folderleave.dialog.sync_warning=La carpeta se esta sincronizando\!
 folderleave.dialog.text=\u00bfAbandonar la carpeta {0} ?
 folderleave.dialog.title=\u00bfAbandonar la carpeta {0} ?
@@ -314,8 +322,16 @@ folderpanel.filestab.dropfile_duplicate_dialog.title=El Archivo ya existe
 ##folderpanel.hometab.choose_local_folder.title=Choose local folder
 ##folderpanel.hometab.confirm_local_folder_move.text=Move local folder from\n{0}\nto\n{1}?
 ##folderpanel.hometab.confirm_local_folder_move.title=Move local folder
+##folderpanel.hometab.folder_not_empty=Folder {0} is not empty.\nDo you want to continue?
+##folderpanel.hometab.folder_not_empty.title=Folder not empty
 folderpanel.hometab.local_folder_location=Ubicaci\u00f3n carpeta local
 folderpanel.hometab.local_size=Tama\u00f1o local
+##folderpanel.hometab.move_content=Will you want to move the contents of the current folder to the new folder?
+##folderpanel.hometab.move_content.title=Move folder contents
+##folderpanel.hometab.move_error.other=There was an error moving the folder\:\n{0}
+##folderpanel.hometab.move_error.other_temp=There was an error moving the folder\:\n{0}\n\nSome of your files may be in\n{1}
+##folderpanel.hometab.move_error.temp=Could not create temporary folder
+##folderpanel.hometab.move_error.title=Error moving folder contents
 folderpanel.hometab.number_of_available_files_at_other_members=N\u00famero de archivos disponibles con otros miembros
 folderpanel.hometab.number_of_local_files_in_folder=N\u00famero de archivos locales en la carpeta
 ##folderpanel.hometab.public_folder=Public
@@ -324,6 +340,8 @@ folderpanel.hometab.number_of_local_files_in_folder=N\u00famero de archivos loca
 folderpanel.hometab.synchronisation_percentage=Porcentaje de sincronizaci\u00f3n
 ##folderpanel.hometab.title=Home
 folderpanel.hometab.total_size=Tama\u00f1o total
+##folderpanel.hometab.working.description=The folder is being moved
+##folderpanel.hometab.working.title=Moving folder
 folderpanel.settingstab.add_a_pattern.example=ejemplo/*.jpg
 ##folderpanel.settingstab.add_a_pattern.text=Enter a Pattern to exclude files from synchronization
 ##folderpanel.settingstab.add_a_pattern.title=Add ignore pattern
@@ -524,6 +542,7 @@ networkstatisticspanel.number_of_public_files=N\u00famero total de archivos disp
 networkstatisticspanel.online_users=Usuarios en l\u00ednea
 ##networkstatisticspanel.public_folder_count=Number of public folders (not joined)
 networkstatisticspanel.public_folders_size=Tama\u00f1o total de todos los archivos dispon\u00edbles
+##networkstatisticspanel.reconnection_queue_size=Nodes in reconnection queue
 
 nodeinfo.error=Imposible solicitar informaci\u00f3n del nodo
 nodeinfo.requesting=Solicitando informaci\u00f3n del nodo...
@@ -588,6 +607,9 @@ preferences.dialog.bindDescr=descripci\u00f3n de la Interface
 preferences.dialog.colortheme=Color del tema
 preferences.dialog.createdesktopshortcuts=Crear acceso directo en el Escritorio
 ##preferences.dialog.debugReports=Enable debug reports
+##preferences.dialog.deleteemptydirs=Delete empty directories
+##preferences.dialog.deltasync=Use delta sync
+##preferences.dialog.deltasync.tooltip=Synchronize only changed file-parts.
 ##preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to friends if a node becomes a member of a folder
 ##preferences.dialog.dialogs.check_for_program_updates=Check for PowerFolder program updates
 preferences.dialog.dialogs.title=Dialogos
@@ -638,13 +660,13 @@ preferences.dialog.plugin.status_disabled=Deshabilitado
 preferences.dialog.plugin.status_enabled=Habilitado
 ##preferences.dialog.plugin.title=Pro Settings
 preferences.dialog.randomPort=Encontrar un puerto autom\u00e1ticamente
-##preferences.dialog.randomPort.tooltip=PowerFolder will try to bind random port. 
+##preferences.dialog.randomPort.tooltip=PowerFolder will try to bind random port.
 preferences.dialog.restarttext=Algunos cambios necesitan reiniciar PowerFolder.\n\u00bfQuiere reiniciar ahora?\n
 preferences.dialog.restarttitle=Solicitar reinicio
 preferences.dialog.showadvanced=Mostrar Preferencias Avanzadas
 preferences.dialog.showpreviewpanel=Habilitar previsualizaci\u00f3n interna de im\u00e1genes
 ##preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>You can find the image preview under My Folders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
-##preferences.dialog.silentthrottle=Silentmode bandwidth throttle 
+##preferences.dialog.silentthrottle=Silentmode bandwidth throttle
 ##preferences.dialog.silentthrottle.tooltip=Set the bandwidth usage throttle in silent mode (only works for limits other than 0)
 ##preferences.dialog.smalltoolbar=Use small toolbar icons
 ##preferences.dialog.startwithwindows=Start PowerFolder with Windows
@@ -705,7 +727,7 @@ publicfolders.size=Tama\u00f1o
 quickinfo.download.active={0} descarga(s) activa(s)
 quickinfo.download.completed={0} descarga(s) recientemente completada(s)
 quickinfo.download.title=Estado de las Descargas
-##quickinfo.folder.downloads_recently_completed=, {0} Downloads recently completed
+##quickinfo.folder.downloads_recently_completed={0} Downloads recently completed
 quickinfo.folder.is_in_sync=La Carpeta esta en sincron\u00eda
 quickinfo.folder.is_synchronizing=La Carpeta se esta sincronizando...
 quickinfo.folder.number_of_files_and_size={0} Archivo(s), {1}
@@ -880,33 +902,36 @@ title.public.folder=Carpeta p\u00fablica
 title.public.folders=Carpetas p\u00fablicas
 title.search.users=Buscar usuarios
 
-##transfer.problem.broken.download=The transfer download was broken for {0}
-##transfer.problem.broken.upload=\=The transfer upload was broken for {0}
-##transfer.problem.file.not.found.exception=There was a FileNotFoundException for {0}\: {1}
-##transfer.problem.general.exception=There was an Exception for {0}\: {1}
-##transfer.problem.illegal.chunk=Received illegal chunk for {0}\: {1}
-##transfer.problem.invalid.part=Received invalid part request {0}
-##transfer.problem.io.exception=Unable to read/write {0}\: {1}
-##transfer.problem.md5.error=There was an MD5-Hash error for {0}
-##transfer.problem.old.upload=Already received download request for {0} from {1}
-##transfer.problem.temp.file.delete=Unable to removed broken tempfile for {0} {1}
-##transfer.problem.temp.file.open=Unable to create/open tempfile for {0} {1}
-##transfer.problem.temp.file.write=Unable to write to tempfile for {0} {1}
+##transfer.problem.broken.download=The transfer download was broken
+##transfer.problem.broken.upload=The transfer upload was broken
+##transfer.problem.file.not.found.exception=There was a FileNotFoundException\: {0}
+##transfer.problem.general.exception=There was an Exception\: {0}
+##transfer.problem.illegal.chunk=Received illegal chunk\: {0}
+##transfer.problem.invalid.part=Received invalid part request\: {0}
+##transfer.problem.io.exception=Unable to read/write\: {0}
+##transfer.problem.md5.error=There was an MD5-Hash error
+##transfer.problem.old.upload=Already received download request from {0}
+##transfer.problem.temp.file.delete=Unable to removed broken tempfile {0}
+##transfer.problem.temp.file.open=Unable to create/open tempfile {0}
+##transfer.problem.temp.file.write=Unable to write to tempfile {0}
 ##transfer.problem.title=File Transfer Problem
-##transfer.problem.transfer.exception=There was a TransferException for {0}\: {1}
+##transfer.problem.transfer.exception=There was a TransferException\: {0}
 
 transfers.completed=terminados
+##transfers.copying=Copying data
 ##transfers.eta=ETA
 transfers.from=De
-##transfers.hashing=Hashing
+##transfers.hashing=Delta sync
 transfers.kbs={0} KB/s
 transfers.local=local
 transfers.pending=Pendientes
 transfers.progress=Progreso
 transfers.queued=en cola
+##transfers.remotehashing=Waiting for requests
 transfers.requested=pedidos
 transfers.searching=Buscando...
 transfers.to=Para
+##transfers.verifying=Verifying sync
 
 unignorefile.description=Los archivo podran ser nuevamente descargados/compartidos
 ##unignorefile.key=U
@@ -979,7 +1004,7 @@ wizard.syncpcspanel.selecttarget=Por favor, seleccione el direcctorio local
 ##wizard.syncpcspanel.takepart=Take part in a mirror
 ##wizard.syncpcspanel.title=Mirror
 ##wizard.webservice.enteraccount=Please enter your account data to login to the Online Storage
-##wizard.webservice.learnmore=What is the PowerFolder WebService?
+##wizard.webservice.learnmore=What is the PowerFolder Online Storage?
 ##wizard.webservice.login=Online Storage Login
 ##wizard.webservice.mirrorchoosefolder=Choose a folder to be backed up by the PowerFolder Online Storage
 ##wizard.webservice.mirrorsetup=Backup Folder by Online Storage
