--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -58,9 +58,9 @@ about.dialog_contributers_tab=Equipe
 about.key=D
 about.name=Aide
 
-aboutwebservice.description=Ouverture du WebService dans le navigateur par d\u00e9faut
-aboutwebservice.key=A
-aboutwebservice.name=A propos du WebService
+##aboutwebservice.description=Opens the Online Storage in default browser
+##aboutwebservice.key=A
+##aboutwebservice.name=About Online Storage
 
 addfriend.description=Ajouter un ami \u00e0 votre liste
 addfriend.key=L
@@ -137,6 +137,14 @@ dialog.binderror=Impossible d'identifier un port disponible\!
 dialog.connect.connecting=Connexion en cours
 dialog.connect.connecting_to=Connexion \u00e0 {0}...
 dialog.connection_problem=Probl\u00e8me de connexion
+##dialog.customsync.autodownloadfromfriends=Autodownload from friends
+##dialog.customsync.autodownloadfromother=Autodownload from others
+##dialog.customsync.minutesbetweenscans=(Maximum) minutes until change detection 
+##dialog.customsync.syncdeletionwithfriends=Synchronize deletion with friends
+##dialog.customsync.syncdeletionwithothers=Synchronize deletion with others
+##dialog.customsync.syncprofilescombo=Default synchronization profile
+##dialog.customsync.text=Select default and / or customize synchronization profile
+##dialog.customsync.title=Choose synchronisation profile
 dialog.fatalerror.title=Erreur Syst\u00e8me
 dialog.synchronization.choose=Merci de choisir l'action de synchronisation ad\u00e9quate
 dialog.synchronization.receive_changes=R\u00e9ception modifi\u00e9e
@@ -147,7 +155,6 @@ dialog.synchronization.title=Synchronisation des projets
 dialog.unable_to_connect_to_address=Impossible de se connecter \u00e0 {0}
 dialog.unable_to_connect_to_member=Impossible de se connecter \u00e0 {0}
 dialog.unable_to_open_port=Impossible d'ouvrir localement le port {0}, v\u00e9rifiez si PowerFolder n'est pas d\u00e9j\u00e0 d\u00e9marr\u00e9
-dialog.updatecheck.developmentversion.noUpdateAvailable=Cette version (d\u00e9veloppement) est \u00e0 jour
 dialog.updatecheck.developmentversion.optionrestart=Re-d\u00e9marrer
 dialog.updatecheck.developmentversion.text=\nUne nouvelle version de PowerFolder vient d'\u00eatre t\u00e9l\u00e9charg\u00e9e.\n\n - Buildtimes -\nVersion actuelle\: {0}\nNouvelle version\: {1}\n\nMerci de red\u00e9marrer PowerFolder maintenant.\n
 dialog.updatecheck.developmentversion.title=Nouvelle version de d\u00e9veloppement
@@ -298,6 +305,7 @@ folderjoin.warning.notempty.text=Le r\u00e9pertoire pour la copie local du dossi
 folderjoin.warning.notempty.title=Le r\u00e9pertoire racine n'est pas vide
 
 folderleave.description=Se d\u00e9connecter du dossier (Arr\u00eate le partage et le t\u00e9l\u00e9chargement des donn\u00e9es)
+##folderleave.dialog.delete=Delete meta-data
 folderleave.dialog.sync_warning=Le dossier est actuellement en synchronisation\!
 folderleave.dialog.text=Se d\u00e9connecter du dossier {0} ?
 folderleave.dialog.title=D\u00e9connexion du dossier {0} ?
@@ -314,8 +322,16 @@ folderpanel.filestab.dropfile_duplicate_dialog.title=Fichier existant
 folderpanel.hometab.choose_local_folder.title=Choisir le dossier source
 folderpanel.hometab.confirm_local_folder_move.text=D\u00e9placer le dossier source de\n{0}\nvers\n{1}?
 folderpanel.hometab.confirm_local_folder_move.title=D\u00e9placer le dossier source
+##folderpanel.hometab.folder_not_empty=Folder {0} is not empty.\nDo you want to continue?
+##folderpanel.hometab.folder_not_empty.title=Folder not empty
 folderpanel.hometab.local_folder_location=Emplacement du dossier local
 folderpanel.hometab.local_size=Taille locale
+##folderpanel.hometab.move_content=Will you want to move the contents of the current folder to the new folder?
+##folderpanel.hometab.move_content.title=Move folder contents
+##folderpanel.hometab.move_error.other=There was an error moving the folder\:\n{0}
+##folderpanel.hometab.move_error.other_temp=There was an error moving the folder\:\n{0}\n\nSome of your files may be in\n{1}
+##folderpanel.hometab.move_error.temp=Could not create temporary folder
+##folderpanel.hometab.move_error.title=Error moving folder contents
 folderpanel.hometab.number_of_available_files_at_other_members=Nombre de fichiers disponibles chez les membres connect\u00e9s
 folderpanel.hometab.number_of_local_files_in_folder=Nombre de fichiers locaux dans le dossier
 folderpanel.hometab.public_folder=Public
@@ -324,6 +340,8 @@ folderpanel.hometab.synchronisation_eta=Synchronisation ETA
 folderpanel.hometab.synchronisation_percentage=Pourcentage de synchronisation
 folderpanel.hometab.title=Accueil
 folderpanel.hometab.total_size=Taille totale
+##folderpanel.hometab.working.description=The folder is being moved
+##folderpanel.hometab.working.title=Moving folder
 folderpanel.settingstab.add_a_pattern.example=exemple/*.jpg
 folderpanel.settingstab.add_a_pattern.text=Indiquer un format de fichier \u00e0 exclure de la syncrhonisation
 folderpanel.settingstab.add_a_pattern.title=Ajouter un format d'exclusion
@@ -476,7 +494,7 @@ member.non_mutual_friend=Aucune connaissance commune
 member.onlan=Connect\u00e9 sur le r\u00e9seau local
 member.supernode=Supernode (Internet)
 
-mirrorfolder.description=Configurer le WebService pour sauvegarder un dossier
+##mirrorfolder.description=Setup the Online Storage to backup a folder
 mirrorfolder.key=B
 mirrorfolder.name=Sauvegarder le dossier
 
@@ -524,6 +542,7 @@ networkstatisticspanel.number_of_public_files=Nombre total de fichiers disponibl
 networkstatisticspanel.online_users=Utilisateurs connect\u00e9s
 networkstatisticspanel.public_folder_count=Nombre de dossiers publics (non connect\u00e9s)
 networkstatisticspanel.public_folders_size=Taille totale de tous les dossiers disponibles
+##networkstatisticspanel.reconnection_queue_size=Nodes in reconnection queue
 
 nodeinfo.error=Impossible de r\u00e9cup\u00e9rer des informations sur la source
 nodeinfo.requesting=R\u00e9cup\u00e9ration d'information sur la source...
@@ -558,7 +577,7 @@ openfile.description=Ouvrir (ex\u00e9cuter) le fichier s\u00e9lectionn\u00e9
 openfile.key=O
 openfile.name=Ouvrir le fichier
 
-openwebservice.description=Ouverture du WebService dans le navigateur par d\u00e9faut
+##openwebservice.description=Opens the Online Storage in the default browser
 openwebservice.key=B
 openwebservice.name=Ouvrir dans le navigateur
 
@@ -588,6 +607,9 @@ preferences.dialog.bindDescr=Description de l'interface
 preferences.dialog.colortheme=Th\u00e8me de l'interface
 preferences.dialog.createdesktopshortcuts=Raccourcis sur le bureau Windows
 preferences.dialog.debugReports=Activer les journaux de d\u00e9bogage
+##preferences.dialog.deleteemptydirs=Delete empty directories
+##preferences.dialog.deltasync=Use delta sync
+##preferences.dialog.deltasync.tooltip=Synchronize only changed file-parts.
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Pr\u00e9venir pour ajouter \u00e0 la liste d'ami(e)s si un noeud devient membre d'un dossier
 preferences.dialog.dialogs.check_for_program_updates=V\u00e9rifier la mise \u00e0 jour de PowerFolder
 preferences.dialog.dialogs.title=Message
@@ -705,7 +727,7 @@ publicfolders.size=Taille
 quickinfo.download.active={0} t\u00e9l\u00e9chargement(s) actif(s)
 quickinfo.download.completed={0} t\u00e9l\u00e9chargement(s) r\u00e9cemment termin\u00e9(s)
 quickinfo.download.title=Etat du t\u00e9l\u00e9chargement
-##quickinfo.folder.downloads_recently_completed=, {0} Downloads recently completed
+##quickinfo.folder.downloads_recently_completed={0} Downloads recently completed
 quickinfo.folder.is_in_sync=Dossier en cours de synchronisation
 quickinfo.folder.is_synchronizing=Ce dossier est en cours de synchronisation...
 quickinfo.folder.number_of_files_and_size={0} fichier(s), {1}
@@ -733,11 +755,11 @@ quickinfo.user.isconnectedinet=Est sur Internet
 quickinfo.user.isconnectedlan=Est sur le LAN
 quickinfo.user.isdiconnected=Est d\u00e9connect\u00e9(e)
 quickinfo.user.secureconnected=Connect\u00e9(e) de fa\u00c3\u00a7on s\u00e9curis\u00e9e
-quickinfo.webservice.connected=Connect\u00e9 au WebService PowerFolder
+##quickinfo.webservice.connected=Connected to the PowerFolder Online Storage
 quickinfo.webservice.foldersmirrored={0} de {1} dossier(s) sur le point d'\u00c3\u00aatre r\u00e9cup\u00e9r\u00e9(s)
-quickinfo.webservice.notconnected=D\u00e9connect\u00e9 du WebService PowerFolder
-quickinfo.webservice.notsetup=WebService de PowerFolder pas encore configur\u00e9
-quickinfo.webservice.title=Sauvegarde en ligne - WebService
+##quickinfo.webservice.notconnected=Disconnected from PowerFolder Online Storage
+##quickinfo.webservice.notsetup=Online Storage not configured yet
+##quickinfo.webservice.title=PowerFolder Online Storage
 
 reconnect.description=Se reconnecter \u00e0 cette utilisateur maintenant
 reconnect.key=R
@@ -880,22 +902,23 @@ title.public.folder=Dossier public
 title.public.folders=Dossiers publics
 title.search.users=Rechercher un utilisateur
 
-##transfer.problem.broken.download=The transfer download was broken for {0}
-##transfer.problem.broken.upload=\=The transfer upload was broken for {0}
-##transfer.problem.file.not.found.exception=There was a FileNotFoundException for {0}\: {1}
-##transfer.problem.general.exception=There was an Exception for {0}\: {1}
-##transfer.problem.illegal.chunk=Received illegal chunk for {0}\: {1}
-##transfer.problem.invalid.part=Received invalid part request {0}
-##transfer.problem.io.exception=Unable to read/write {0}\: {1}
-##transfer.problem.md5.error=There was an MD5-Hash error for {0}
-##transfer.problem.old.upload=Already received download request for {0} from {1}
-##transfer.problem.temp.file.delete=Unable to removed broken tempfile for {0} {1}
-##transfer.problem.temp.file.open=Unable to create/open tempfile for {0} {1}
-##transfer.problem.temp.file.write=Unable to write to tempfile for {0} {1}
+##transfer.problem.broken.download=The transfer download was broken
+##transfer.problem.broken.upload=The transfer upload was broken
+##transfer.problem.file.not.found.exception=There was a FileNotFoundException\: {0}
+##transfer.problem.general.exception=There was an Exception\: {0}
+##transfer.problem.illegal.chunk=Received illegal chunk\: {0}
+##transfer.problem.invalid.part=Received invalid part request\: {0}
+##transfer.problem.io.exception=Unable to read/write\: {0}
+##transfer.problem.md5.error=There was an MD5-Hash error
+##transfer.problem.old.upload=Already received download request from {0}
+##transfer.problem.temp.file.delete=Unable to removed broken tempfile {0}
+##transfer.problem.temp.file.open=Unable to create/open tempfile {0}
+##transfer.problem.temp.file.write=Unable to write to tempfile {0}
 ##transfer.problem.title=File Transfer Problem
-##transfer.problem.transfer.exception=There was a TransferException for {0}\: {1}
+##transfer.problem.transfer.exception=There was a TransferException\: {0}
 
 transfers.completed=Termin\u00e9
+##transfers.copying=Copying data
 transfers.eta=ETA
 transfers.from=Depuis
 transfers.hashing=Brouillage
@@ -904,9 +927,11 @@ transfers.local=local
 transfers.pending=En attente
 transfers.progress=En progres
 transfers.queued=file d'attente
+##transfers.remotehashing=Waiting for requests
 transfers.requested=demand\u00e9
 transfers.searching=Recherche...
 transfers.to=To
+##transfers.verifying=Verifying sync
 
 unignorefile.description=Fichier(s) \u00e0 t\u00e9l\u00e9charger/partager \u00e0 nouveau
 unignorefile.key=R
@@ -978,11 +1003,11 @@ wizard.syncpcspanel.selecttarget=Merci d'indiquer le r\u00e9pertoire local cible
 wizard.syncpcspanel.setup=Configurer un nouveau dossier de duplication
 wizard.syncpcspanel.takepart=Prendre part \u00e0 une duplication
 wizard.syncpcspanel.title=Duplication
-wizard.webservice.enteraccount=Merci d'indiquer votre compte pour vous connecter au WebService
-wizard.webservice.learnmore=Qu'est-ce que le WebService PowerFolder ?
+##wizard.webservice.enteraccount=Please enter your account data to login to the Online Storage
+##wizard.webservice.learnmore=What is the PowerFolder Online Storage?
 wizard.webservice.login=Identifiant de sauvegarde en ligne
-wizard.webservice.mirrorchoosefolder=Indiquer le dossier devant \u00c3\u00aatre r\u00e9cup\u00e9r\u00e9 par le WebService PowerFolder
-wizard.webservice.mirrorsetup=Sauvegarder le dossier par WebService
+##wizard.webservice.mirrorchoosefolder=Choose a folder to be backed up by the PowerFolder Online Storage
+##wizard.webservice.mirrorsetup=Backup Folder by Online Storage
 wizard.webservice.password=Mot de passe
 wizard.webservice.register=Cr\u00e9er un nouveau compte
 wizard.webservice.username=E-mail
