--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -137,6 +137,14 @@ dialog.binderror=\u30dd\u30fc\u30c8\u3078\u306e\u30d0\u30a4\u30f3\u30c9\u4e0d\u5
 dialog.connect.connecting=\u63a5\u7d9a\u8a66\u884c\u4e2d
 dialog.connect.connecting_to={0} \u306b\u63a5\u7d9a\u3092\u8a66\u307f\u3066\u3044\u307e\u3059...
 dialog.connection_problem=\u63a5\u7d9a\u306b\u554f\u984c
+##dialog.customsync.autodownloadfromfriends=Autodownload from friends
+##dialog.customsync.autodownloadfromother=Autodownload from others
+##dialog.customsync.minutesbetweenscans=(Maximum) minutes until change detection 
+##dialog.customsync.syncdeletionwithfriends=Synchronize deletion with friends
+##dialog.customsync.syncdeletionwithothers=Synchronize deletion with others
+##dialog.customsync.syncprofilescombo=Default synchronization profile
+##dialog.customsync.text=Select default and / or customize synchronization profile
+##dialog.customsync.title=Choose synchronisation profile
 dialog.fatalerror.title=\u81f4\u547d\u7684\u306a\u30a8\u30e9\u30fc
 dialog.synchronization.choose=\u540c\u671f\u52d5\u4f5c\u306e\u9078\u629e \u30d7\u30ed\u30b8\u30a7\u30af\u30c8\uff1a
 dialog.synchronization.receive_changes=\u30ea\u30e2\u30fc\u30c8\u306e\u66f4\u65b0\u5909\u66f4\u3092\u30ed\u30fc\u30ab\u30eb\u306b\u53d7\u4fe1
@@ -147,7 +155,6 @@ dialog.synchronization.title=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u540c\u6
 dialog.unable_to_connect_to_address={0} \u306b\u63a5\u7d9a\u3067\u304d\u307e\u305b\u3093\u3002
 dialog.unable_to_connect_to_member={0} \u306b\u63a5\u7d9a\u3067\u304d\u307e\u305b\u3093\u3002
 dialog.unable_to_open_port=\u30ed\u30fc\u30ab\u30eb\u30dd\u30fc\u30c8 {0} \u3092\u958b\u304f\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093\u3002PowerFolder \u304c\u3059\u3067\u306b\u7a3c\u50cd\u4e2d\u306e\u53ef\u80fd\u6027\u304c\u3042\u308a\u307e\u3059\u3002
-dialog.updatecheck.developmentversion.noUpdateAvailable=\u3053\u306e\u30d0\u30fc\u30b8\u30e7\u30f3\uff08\u958b\u767a\u7248\uff09\u306f\u6700\u65b0\u3067\u3059\u3002
 dialog.updatecheck.developmentversion.optionrestart=\u518d\u8d77\u52d5
 dialog.updatecheck.developmentversion.text=\nPowerFolder \u306e\u65b0\u3057\u3044\u958b\u767a\u7248\u304c\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3055\u308c\u307e\u3057\u305f\u3002\n\n- \u30d3\u30eb\u30c9\u65e5\u6642 -\n\u672c\u7248\: {0}\n\u65b0\u7248\: {1}\n\nPowerFolder \u3092\u76f4\u3061\u306b\u518d\u8d77\u52d5\u3057\u3066\u304f\u3060\u3055\u3044\u3002\n
 dialog.updatecheck.developmentversion.title=\u65b0\u958b\u767a\u7248
@@ -298,6 +305,7 @@ folderjoin.warning.notempty.text=\u30d5\u30a9\u30eb\u30c0 '{0}' \u306e\u30ed\u30
 folderjoin.warning.notempty.title=\u7a7a\u3067\u306f\u306a\u3044\u30ed\u30fc\u30ab\u30eb\u306e\u57fa\u672c\u30c7\u30a3\u30ec\u30af\u30c8\u30ea
 
 folderleave.description=\u3053\u306e\u30d5\u30a9\u30eb\u30c0\u3092\u9000\u907f\uff08\u30c7\u30fc\u30bf\u306e\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3084\u5171\u6709\u3092\u53d6\u308a\u6b62\u3081\uff09
+##folderleave.dialog.delete=Delete meta-data
 folderleave.dialog.sync_warning=\u3053\u306e\u30d5\u30a9\u30eb\u30c0\u306f\u73fe\u5728\u540c\u671f\u4e2d\u3067\u3059\uff01
 folderleave.dialog.text=\u30d5\u30a9\u30eb\u30c0 {0} \u3092\u9000\u907f\u3057\u307e\u3059\u304b\uff1f
 folderleave.dialog.title={0} \u30d5\u30a9\u30eb\u30c0\u9000\u907f\uff1f
@@ -314,8 +322,16 @@ folderpanel.filestab.dropfile_duplicate_dialog.title=\u540c\u4e00\u30d5\u30a1\u3
 folderpanel.hometab.choose_local_folder.title=\u30ed\u30fc\u30ab\u30eb\u30d5\u30a9\u30eb\u30c0\u306e\u9078\u629e
 folderpanel.hometab.confirm_local_folder_move.text={0}\n\u304b\u3089\n{1}\n\u306b\u30ed\u30fc\u30ab\u30eb\u30d5\u30a9\u30eb\u30c0\u3092\u79fb\u52d5\u3057\u307e\u3059\u304b\uff1f
 folderpanel.hometab.confirm_local_folder_move.title=\u30ed\u30fc\u30ab\u30eb\u30d5\u30a1\u30eb\u30c0\u306e\u79fb\u52d5
+##folderpanel.hometab.folder_not_empty=Folder {0} is not empty.\nDo you want to continue?
+##folderpanel.hometab.folder_not_empty.title=Folder not empty
 folderpanel.hometab.local_folder_location=\u30ed\u30fc\u30ab\u30eb\u30d5\u30a9\u30eb\u30c0\u306e\u5834\u6240
 folderpanel.hometab.local_size=\u30ed\u30fc\u30ab\u30eb\u30b5\u30a4\u30ba
+##folderpanel.hometab.move_content=Will you want to move the contents of the current folder to the new folder?
+##folderpanel.hometab.move_content.title=Move folder contents
+##folderpanel.hometab.move_error.other=There was an error moving the folder\:\n{0}
+##folderpanel.hometab.move_error.other_temp=There was an error moving the folder\:\n{0}\n\nSome of your files may be in\n{1}
+##folderpanel.hometab.move_error.temp=Could not create temporary folder
+##folderpanel.hometab.move_error.title=Error moving folder contents
 folderpanel.hometab.number_of_available_files_at_other_members=\u4ed6\u30e1\u30f3\u30d0\u30fc\u304b\u3089\u53d6\u5f97\u53ef\u80fd\u306a\u30d5\u30a1\u30a4\u30eb\u6570
 folderpanel.hometab.number_of_local_files_in_folder=\u30d5\u30a9\u30eb\u30c0\u5185\u306e\u30ed\u30fc\u30ab\u30eb\u30d5\u30a1\u30a4\u30eb\u6570
 folderpanel.hometab.public_folder=\u30d1\u30d6\u30ea\u30c3\u30af
@@ -324,6 +340,8 @@ folderpanel.hometab.synchronisation_eta=\u540c\u671f\u63a8\u5b9a\u6240\u8981\u66
 folderpanel.hometab.synchronisation_percentage=\u540c\u671f\u5272\u5408
 folderpanel.hometab.title=\u30db\u30fc\u30e0
 folderpanel.hometab.total_size=\u5408\u8a08\u30b5\u30a4\u30ba
+##folderpanel.hometab.working.description=The folder is being moved
+##folderpanel.hometab.working.title=Moving folder
 folderpanel.settingstab.add_a_pattern.example=\u5165\u529b\u4f8b/*.jpg
 folderpanel.settingstab.add_a_pattern.text=\u540c\u671f\u5bfe\u8c61\u304b\u3089\u30d5\u30a1\u30a4\u30eb\u3092\u9664\u5916\u3059\u308b\u305f\u3081\u306e\u30d1\u30bf\u30fc\u30f3\u3092\u5165\u529b
 folderpanel.settingstab.add_a_pattern.title=\u7121\u8996\u5bfe\u8c61\u30d1\u30bf\u30fc\u30f3\u306e\u8ffd\u52a0
@@ -524,6 +542,7 @@ networkstatisticspanel.number_of_public_files=\u53d6\u5f97\u53ef\u80fd\u30d5\u30
 networkstatisticspanel.online_users=\u30aa\u30f3\u30e9\u30a4\u30f3\u30e6\u30fc\u30b6\u30fc
 networkstatisticspanel.public_folder_count=\u30d1\u30d6\u30ea\u30c3\u30af\u30d5\u30a9\u30eb\u30c0\u6570\uff08\u975e\u53c2\u52a0\uff09
 networkstatisticspanel.public_folders_size=\u53d6\u5f97\u53ef\u80fd\u5168\u30d5\u30a1\u30a4\u30eb\u5408\u8a08\u30b5\u30a4\u30ba
+##networkstatisticspanel.reconnection_queue_size=Nodes in reconnection queue
 
 nodeinfo.error=\u30ce\u30fc\u30c9\u60c5\u5831\u3092\u8981\u6c42\u3067\u304d\u307e\u305b\u3093\u3002
 nodeinfo.requesting=\u30ce\u30fc\u30c9\u60c5\u5831\u3092\u8981\u6c42\u3057\u3066\u3044\u307e\u3059...
@@ -588,6 +607,9 @@ preferences.dialog.bindDescr=\u30a4\u30f3\u30bf\u30fc\u30d5\u30a7\u30a4\u30b9\u3
 preferences.dialog.colortheme=\u914d\u8272\u30c6\u30fc\u30de
 preferences.dialog.createdesktopshortcuts=\u30c7\u30b9\u30af\u30c8\u30c3\u30d7\u30b7\u30e7\u30fc\u30c8\u30ab\u30c3\u30c8\u306e\u4f5c\u6210
 preferences.dialog.debugReports=\u30c7\u30d0\u30b0\u5831\u544a\u3092\u6709\u52b9\u306b
+##preferences.dialog.deleteemptydirs=Delete empty directories
+##preferences.dialog.deltasync=Use delta sync
+##preferences.dialog.deltasync.tooltip=Synchronize only changed file-parts.
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=\u30ce\u30fc\u30c9\u304c\u30d5\u30a9\u30eb\u30c0\u306e\u30e1\u30f3\u30d0\u30fc\u306b\u306a\u308b\u5834\u5408\u306b\u53cb\u4eba\u30ea\u30b9\u30c8\u3078\u8ffd\u52a0\u3059\u308b\u304b\u78ba\u8a8d
 preferences.dialog.dialogs.check_for_program_updates=PowerFolder \u672c\u4f53\u30d7\u30ed\u30b0\u30e9\u30e0\u306e\u66f4\u65b0\u3092\u30c1\u30a7\u30c3\u30af
 preferences.dialog.dialogs.title=\u30dd\u30c3\u30d7\u30a2\u30c3\u30d7
@@ -705,7 +727,7 @@ publicfolders.size=\u30b5\u30a4\u30ba
 quickinfo.download.active=\u51e6\u7406\u4e2d\u306e\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9 {0}
 quickinfo.download.completed=\u6700\u8fd1\u5b8c\u4e86\u3057\u305f\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9 {0}
 quickinfo.download.title=\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u306e\u72b6\u614b
-##quickinfo.folder.downloads_recently_completed=, {0} Downloads recently completed
+##quickinfo.folder.downloads_recently_completed={0} Downloads recently completed
 quickinfo.folder.is_in_sync=\u30d5\u30a9\u30eb\u30c0\u540c\u671f\u6e08\u307f
 quickinfo.folder.is_synchronizing=\u30d5\u30a9\u30eb\u30c0\u540c\u671f\u4e2d...
 quickinfo.folder.number_of_files_and_size={0} \u30d5\u30a1\u30a4\u30eb\u3001 {1}
@@ -880,22 +902,23 @@ title.public.folder=\u30d1\u30d6\u30ea\u30c3\u30af \u30d5\u30a9\u30eb\u30c0
 title.public.folders=\u30d1\u30d6\u30ea\u30c3\u30af \u30d5\u30a9\u30eb\u30c0
 title.search.users=\u30e6\u30fc\u30b6\u30fc\u691c\u7d22
 
-##transfer.problem.broken.download=The transfer download was broken for {0}
-##transfer.problem.broken.upload=\=The transfer upload was broken for {0}
-##transfer.problem.file.not.found.exception=There was a FileNotFoundException for {0}\: {1}
-##transfer.problem.general.exception=There was an Exception for {0}\: {1}
-##transfer.problem.illegal.chunk=Received illegal chunk for {0}\: {1}
-##transfer.problem.invalid.part=Received invalid part request {0}
-##transfer.problem.io.exception=Unable to read/write {0}\: {1}
-##transfer.problem.md5.error=There was an MD5-Hash error for {0}
-##transfer.problem.old.upload=Already received download request for {0} from {1}
-##transfer.problem.temp.file.delete=Unable to removed broken tempfile for {0} {1}
-##transfer.problem.temp.file.open=Unable to create/open tempfile for {0} {1}
-##transfer.problem.temp.file.write=Unable to write to tempfile for {0} {1}
+##transfer.problem.broken.download=The transfer download was broken
+##transfer.problem.broken.upload=The transfer upload was broken
+##transfer.problem.file.not.found.exception=There was a FileNotFoundException\: {0}
+##transfer.problem.general.exception=There was an Exception\: {0}
+##transfer.problem.illegal.chunk=Received illegal chunk\: {0}
+##transfer.problem.invalid.part=Received invalid part request\: {0}
+##transfer.problem.io.exception=Unable to read/write\: {0}
+##transfer.problem.md5.error=There was an MD5-Hash error
+##transfer.problem.old.upload=Already received download request from {0}
+##transfer.problem.temp.file.delete=Unable to removed broken tempfile {0}
+##transfer.problem.temp.file.open=Unable to create/open tempfile {0}
+##transfer.problem.temp.file.write=Unable to write to tempfile {0}
 ##transfer.problem.title=File Transfer Problem
-##transfer.problem.transfer.exception=There was a TransferException for {0}\: {1}
+##transfer.problem.transfer.exception=There was a TransferException\: {0}
 
 transfers.completed=\u5b8c\u4e86
+##transfers.copying=Copying data
 transfers.eta=\u63a8\u5b9a\u6240\u8981\u6642\u9593
 transfers.from=\u53d6\u5f97\u5143
 transfers.hashing=\u30cf\u30c3\u30b7\u30e5\u7b97\u51fa\u4e2d
@@ -904,9 +927,11 @@ transfers.local=\u30ed\u30fc\u30ab\u30eb
 transfers.pending=\u5f85\u6a5f\u4e2d
 transfers.progress=\u9032\u884c\u72b6\u6cc1
 transfers.queued=\u9806\u756a\u5f85\u3061
+##transfers.remotehashing=Waiting for requests
 transfers.requested=\u8981\u6c42
 transfers.searching=\u691c\u7d22\u4e2d...
 transfers.to=\u9001\u308a\u5148
+##transfers.verifying=Verifying sync
 
 unignorefile.description=\u30d5\u30a1\u30a4\u30eb\u3092\u518d\u3073\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3084\u5171\u6709\u306e\u5bfe\u8c61\u306b\u623b\u3059
 unignorefile.key=U
