--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -58,9 +58,9 @@ about.dialog_contributers_tab=Team
 about.key=h
 about.name=Help
 
-aboutwebservice.description=Opent de website van de WebService in een Webbrowser
-aboutwebservice.key=O
-aboutwebservice.name=Over WebService
+##aboutwebservice.description=Opens the Online Storage in default browser
+##aboutwebservice.key=A
+##aboutwebservice.name=About Online Storage
 
 addfriend.description=Voegt gebruiker toe aan de vriendenlijst
 addfriend.key=T
@@ -137,6 +137,14 @@ dialog.binderror=Niet instaat om een port te verbinden\!
 dialog.connect.connecting=Verbinden
 dialog.connect.connecting_to=Verbinden met {0}...
 dialog.connection_problem=Verbindingsprobleem
+##dialog.customsync.autodownloadfromfriends=Autodownload from friends
+##dialog.customsync.autodownloadfromother=Autodownload from others
+##dialog.customsync.minutesbetweenscans=(Maximum) minutes until change detection 
+##dialog.customsync.syncdeletionwithfriends=Synchronize deletion with friends
+##dialog.customsync.syncdeletionwithothers=Synchronize deletion with others
+##dialog.customsync.syncprofilescombo=Default synchronization profile
+##dialog.customsync.text=Select default and / or customize synchronization profile
+##dialog.customsync.title=Choose synchronisation profile
 dialog.fatalerror.title=Fatale Fout
 dialog.synchronization.choose=Kies uw sync actie op
 dialog.synchronization.receive_changes=Ontvang veranderingen
@@ -147,7 +155,6 @@ dialog.synchronization.title=Project synchronizatie
 dialog.unable_to_connect_to_address=Kan niet verbinden met {0}
 dialog.unable_to_connect_to_member=Kan niet verbinden met {0}
 dialog.unable_to_open_port=Kan lokale poort {0} niet openen, PowerFolder is misschien al gestart?
-dialog.updatecheck.developmentversion.noUpdateAvailable=Deze versie (ontwikkel) is recent
 dialog.updatecheck.developmentversion.optionrestart=Opnieuw starten
 dialog.updatecheck.developmentversion.text=\nEen nieuwe ontwikkel versie van PowerFolder is gedownload.\n\n"- Gemaakt op/om -\nDeze versie\: {0}\nNieuwe versie\: {1}\n\nStart Powerfolder opnieuw.\n
 dialog.updatecheck.developmentversion.title=Nieuwe ontwikkel versie
@@ -298,6 +305,7 @@ folderjoin.warning.notempty.text=De map voor de lokale kopie van de folder '{0}'
 folderjoin.warning.notempty.title=Lokale basis map niet leeg
 
 folderleave.description=Verlaat deze folder (Stop delen en downloading van gegevens)
+##folderleave.dialog.delete=Delete meta-data
 folderleave.dialog.sync_warning=De folder is momenteel aan het synchronizeren\!
 folderleave.dialog.text=Stop delen van folder {0} ?
 folderleave.dialog.title=Stop delen van Folder {0} ?
@@ -314,8 +322,16 @@ folderpanel.filestab.dropfile_duplicate_dialog.title=Bestand bestaat
 folderpanel.hometab.choose_local_folder.title=Kies folder op uw hardeschijf
 folderpanel.hometab.confirm_local_folder_move.text=Verplaats lokale folder van \n{0}\nnaar\n{1}?
 folderpanel.hometab.confirm_local_folder_move.title=Verplaats lokale folder
+##folderpanel.hometab.folder_not_empty=Folder {0} is not empty.\nDo you want to continue?
+##folderpanel.hometab.folder_not_empty.title=Folder not empty
 folderpanel.hometab.local_folder_location=Lokale map lokatie
 folderpanel.hometab.local_size=Lokale omvang
+##folderpanel.hometab.move_content=Will you want to move the contents of the current folder to the new folder?
+##folderpanel.hometab.move_content.title=Move folder contents
+##folderpanel.hometab.move_error.other=There was an error moving the folder\:\n{0}
+##folderpanel.hometab.move_error.other_temp=There was an error moving the folder\:\n{0}\n\nSome of your files may be in\n{1}
+##folderpanel.hometab.move_error.temp=Could not create temporary folder
+##folderpanel.hometab.move_error.title=Error moving folder contents
 folderpanel.hometab.number_of_available_files_at_other_members=Aantal beschikbare bestanden bij andere leden
 folderpanel.hometab.number_of_local_files_in_folder=Aantal lokale bestanden in Folder
 folderpanel.hometab.public_folder=Publiek
@@ -324,6 +340,8 @@ folderpanel.hometab.synchronisation_eta=Synchronizatie nog
 folderpanel.hometab.synchronisation_percentage=Synchronizatie percentage
 folderpanel.hometab.title=Start
 folderpanel.hometab.total_size=Totale omvang
+##folderpanel.hometab.working.description=The folder is being moved
+##folderpanel.hometab.working.title=Moving folder
 folderpanel.settingstab.add_a_pattern.example=voorbeeld/*.jpg
 folderpanel.settingstab.add_a_pattern.text=Geef een patroon in om bestanden uit te zonderen van synchronizatie
 folderpanel.settingstab.add_a_pattern.title=Voeg patroon toe
@@ -476,7 +494,7 @@ member.non_mutual_friend=Niet wederzijdse vriend
 member.onlan=Lokaal
 member.supernode=Supernode
 
-mirrorfolder.description=Stel de WebService in om folder backup te maken
+##mirrorfolder.description=Setup the Online Storage to backup a folder
 mirrorfolder.key=B
 mirrorfolder.name=Backup Folder
 
@@ -524,6 +542,7 @@ networkstatisticspanel.number_of_public_files=Totaal aantal beschikbare bestande
 networkstatisticspanel.online_users=Verbonden gebruikers
 networkstatisticspanel.public_folder_count=Aantal publieke folders (niet lid)
 networkstatisticspanel.public_folders_size=Totale omvang van alle beschikbare bestanden
+##networkstatisticspanel.reconnection_queue_size=Nodes in reconnection queue
 
 nodeinfo.error=Niet mogelijk om gebruiker informatie op te vragen
 nodeinfo.requesting=Vraag om gebruiker informatie...
@@ -558,7 +577,7 @@ openfile.description=Open (start) geselecteerd bestand
 openfile.key=O
 openfile.name=Open bestand
 
-openwebservice.description=Opent de WebService in een webbrowser
+##openwebservice.description=Opens the Online Storage in the default browser
 openwebservice.key=B
 openwebservice.name=Open in Browser
 
@@ -588,6 +607,9 @@ preferences.dialog.bindDescr=Interface beschrijving
 preferences.dialog.colortheme=Kleur thema
 preferences.dialog.createdesktopshortcuts=Maak bureaublad snelkoppelingen
 preferences.dialog.debugReports=Maak fout rapportage mogelijk 
+##preferences.dialog.deleteemptydirs=Delete empty directories
+##preferences.dialog.deltasync=Use delta sync
+##preferences.dialog.deltasync.tooltip=Synchronize only changed file-parts.
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Vraag om toevoegen aan vrienden als een gebruiker lid wordt van een folder
 preferences.dialog.dialogs.check_for_program_updates=Check voor PowerFolder programma updates
 preferences.dialog.dialogs.title=Dialogen
@@ -705,7 +727,7 @@ publicfolders.size=Grootte
 quickinfo.download.active={0} actieve download(s)
 quickinfo.download.completed={0} download(s) recent voltooid
 quickinfo.download.title=Download status
-##quickinfo.folder.downloads_recently_completed=, {0} Downloads recently completed
+##quickinfo.folder.downloads_recently_completed={0} Downloads recently completed
 quickinfo.folder.is_in_sync=Folder is gesynchronizeerd
 quickinfo.folder.is_synchronizing=Folder is aan het synchronizeren...
 quickinfo.folder.number_of_files_and_size={0} Bestand(en), {1}
@@ -733,11 +755,11 @@ quickinfo.user.isconnectedinet=Is op het Internet
 quickinfo.user.isconnectedlan=Is op LAN
 quickinfo.user.isdiconnected=Is niet verbonden
 quickinfo.user.secureconnected=versleuteld verbonden
-quickinfo.webservice.connected=Verbonden met de PowerFolder WebService
+##quickinfo.webservice.connected=Connected to the PowerFolder Online Storage
 quickinfo.webservice.foldersmirrored=Backup van {0} van de {1} Folder(s) worden gemaakt
-quickinfo.webservice.notconnected=Niet verbonden met PowerFolder WebService
-quickinfo.webservice.notsetup=PowerFolder WebService nog niet ingesteld
-quickinfo.webservice.title=Online Opslag - WebService
+##quickinfo.webservice.notconnected=Disconnected from PowerFolder Online Storage
+##quickinfo.webservice.notsetup=Online Storage not configured yet
+##quickinfo.webservice.title=PowerFolder Online Storage
 
 reconnect.description=Reconnects to this user now
 reconnect.key=r
@@ -880,22 +902,23 @@ title.public.folder=Publieke Folder
 title.public.folders=Publieke Folders
 title.search.users=Zoek gebruikers
 
-##transfer.problem.broken.download=The transfer download was broken for {0}
-##transfer.problem.broken.upload=\=The transfer upload was broken for {0}
-##transfer.problem.file.not.found.exception=There was a FileNotFoundException for {0}\: {1}
-##transfer.problem.general.exception=There was an Exception for {0}\: {1}
-##transfer.problem.illegal.chunk=Received illegal chunk for {0}\: {1}
-##transfer.problem.invalid.part=Received invalid part request {0}
-##transfer.problem.io.exception=Unable to read/write {0}\: {1}
-##transfer.problem.md5.error=There was an MD5-Hash error for {0}
-##transfer.problem.old.upload=Already received download request for {0} from {1}
-##transfer.problem.temp.file.delete=Unable to removed broken tempfile for {0} {1}
-##transfer.problem.temp.file.open=Unable to create/open tempfile for {0} {1}
-##transfer.problem.temp.file.write=Unable to write to tempfile for {0} {1}
+##transfer.problem.broken.download=The transfer download was broken
+##transfer.problem.broken.upload=The transfer upload was broken
+##transfer.problem.file.not.found.exception=There was a FileNotFoundException\: {0}
+##transfer.problem.general.exception=There was an Exception\: {0}
+##transfer.problem.illegal.chunk=Received illegal chunk\: {0}
+##transfer.problem.invalid.part=Received invalid part request\: {0}
+##transfer.problem.io.exception=Unable to read/write\: {0}
+##transfer.problem.md5.error=There was an MD5-Hash error
+##transfer.problem.old.upload=Already received download request from {0}
+##transfer.problem.temp.file.delete=Unable to removed broken tempfile {0}
+##transfer.problem.temp.file.open=Unable to create/open tempfile {0}
+##transfer.problem.temp.file.write=Unable to write to tempfile {0}
 ##transfer.problem.title=File Transfer Problem
-##transfer.problem.transfer.exception=There was a TransferException for {0}\: {1}
+##transfer.problem.transfer.exception=There was a TransferException\: {0}
 
 transfers.completed=klaar
+##transfers.copying=Copying data
 transfers.eta=Nog...
 transfers.from=Van
 transfers.hashing=Hashing
@@ -904,9 +927,11 @@ transfers.local=Lokaal
 transfers.pending=Later
 transfers.progress=Voortgang
 transfers.queued=in wachtrij
+##transfers.remotehashing=Waiting for requests
 transfers.requested=in wachtrij
 transfers.searching=Zoeken...
 transfers.to=Naar
+##transfers.verifying=Verifying sync
 
 unignorefile.description=Bestand zal weer worden gedownload/gedeeld
 unignorefile.key=l
@@ -978,11 +1003,11 @@ wizard.syncpcspanel.selecttarget=Kies een lokale map waar de bestanden terecht m
 wizard.syncpcspanel.setup=Stel een nieuwe "exacte kopie" in
 wizard.syncpcspanel.takepart=Wordt lid van een "exactie kopie"
 wizard.syncpcspanel.title="Exacte kopie"
-wizard.webservice.enteraccount=Geeft uw gebruikers gegevens in van de om in te loggen in de WebService
-wizard.webservice.learnmore=Wat is de PowerFolder WebService?
+##wizard.webservice.enteraccount=Please enter your account data to login to the Online Storage
+##wizard.webservice.learnmore=What is the PowerFolder Online Storage?
 wizard.webservice.login=Online Opslag Inloggen
-wizard.webservice.mirrorchoosefolder=Kies een folder die door de PowerFolder WebService gebackupped moet worden.
-wizard.webservice.mirrorsetup=Backup Folder door WebService
+##wizard.webservice.mirrorchoosefolder=Choose a folder to be backed up by the PowerFolder Online Storage
+##wizard.webservice.mirrorsetup=Backup Folder by Online Storage
 wizard.webservice.password=Wachtwoord
 wizard.webservice.register=Registreer een nieuw account  
 wizard.webservice.username=E-mail
