--- a/src/etc/Translation_sv.properties
+++ b/src/etc/Translation_sv.properties
@@ -137,6 +137,14 @@ dialog.binderror=N\u00e4tverksporten \u00e4r upptagen\!
 dialog.connect.connecting=Ansluter
 dialog.connect.connecting_to=Ansluter till {0}...
 dialog.connection_problem=Anslutningsproblem
+##dialog.customsync.autodownloadfromfriends=Autodownload from friends
+##dialog.customsync.autodownloadfromother=Autodownload from others
+##dialog.customsync.minutesbetweenscans=(Maximum) minutes until change detection 
+##dialog.customsync.syncdeletionwithfriends=Synchronize deletion with friends
+##dialog.customsync.syncdeletionwithothers=Synchronize deletion with others
+##dialog.customsync.syncprofilescombo=Default synchronization profile
+##dialog.customsync.text=Select default and / or customize synchronization profile
+##dialog.customsync.title=Choose synchronisation profile
 dialog.fatalerror.title=Allvarligt fel
 dialog.synchronization.choose=V\u00e4lj alternativ f\u00f6r synkronisering
 dialog.synchronization.receive_changes=Ta emot \u00e4ndringar
@@ -147,7 +155,6 @@ dialog.synchronization.title=Projektsynkronisering
 dialog.unable_to_connect_to_address=Kan inte ansluta till {0}
 dialog.unable_to_connect_to_member=Kan inte ansluta till {0}
 dialog.unable_to_open_port=Kan inte ansluta till port {0}, PowerFolder kanske redan k\u00f6r
-dialog.updatecheck.developmentversion.noUpdateAvailable=Denna version (utvecklingsversion) \u00e4r uppdaterad
 dialog.updatecheck.developmentversion.optionrestart=Starta om
 dialog.updatecheck.developmentversion.text=\nEn ny utvecklingsversion av PowerFolder har laddats ner.\n\n - Skapad -\nDenna version\: {0}\nNy version\: {1}\n\nVar v\u00e4nlig starta om PowerFolder nu.\n
 dialog.updatecheck.developmentversion.title=Ny utvecklingsversion
@@ -298,6 +305,7 @@ folderjoin.warning.notempty.text=Mappen f\u00f6r den lokala kopian av foldern '{
 folderjoin.warning.notempty.title=Lokal bas-mapp \u00e4r inte tom
 
 folderleave.description=L\u00e4mna denna folder (Sluta dela och ladda ner data)
+##folderleave.dialog.delete=Delete meta-data
 folderleave.dialog.sync_warning=Foldern h\u00e5ller p\u00e5 att synkroniseras\!
 folderleave.dialog.text=Vill du verkligen l\u00e4mna folder {0} ?
 folderleave.dialog.title=L\u00e4mna folder {0} ?
@@ -314,8 +322,16 @@ folderpanel.filestab.dropfile_duplicate_dialog.title=Filen finns redan
 ##folderpanel.hometab.choose_local_folder.title=Choose local folder
 ##folderpanel.hometab.confirm_local_folder_move.text=Move local folder from\n{0}\nto\n{1}?
 ##folderpanel.hometab.confirm_local_folder_move.title=Move local folder
+##folderpanel.hometab.folder_not_empty=Folder {0} is not empty.\nDo you want to continue?
+##folderpanel.hometab.folder_not_empty.title=Folder not empty
 folderpanel.hometab.local_folder_location=Lokal folder plats
 folderpanel.hometab.local_size=Lokal storlek
+##folderpanel.hometab.move_content=Will you want to move the contents of the current folder to the new folder?
+##folderpanel.hometab.move_content.title=Move folder contents
+##folderpanel.hometab.move_error.other=There was an error moving the folder\:\n{0}
+##folderpanel.hometab.move_error.other_temp=There was an error moving the folder\:\n{0}\n\nSome of your files may be in\n{1}
+##folderpanel.hometab.move_error.temp=Could not create temporary folder
+##folderpanel.hometab.move_error.title=Error moving folder contents
 folderpanel.hometab.number_of_available_files_at_other_members=Antal tillg\u00e4ngliga filer hos andra medlemmar
 folderpanel.hometab.number_of_local_files_in_folder=Antal lokala filer i foldern
 folderpanel.hometab.public_folder=Offentlig
@@ -324,6 +340,8 @@ folderpanel.hometab.synchronisation_eta=Synkronisering klar om
 folderpanel.hometab.synchronisation_percentage=Synkroniserat i procent 
 folderpanel.hometab.title=Hem
 folderpanel.hometab.total_size=Total storlek
+##folderpanel.hometab.working.description=The folder is being moved
+##folderpanel.hometab.working.title=Moving folder
 folderpanel.settingstab.add_a_pattern.example=exempel/*.jpg
 folderpanel.settingstab.add_a_pattern.text=L\u00e4gg till ett filnamnsm\u00f6nster f\u00f6r att undanta filer fr\u00e5n synkronisering
 folderpanel.settingstab.add_a_pattern.title=L\u00e4gg till filnamnsm\u00f6nster
@@ -524,6 +542,7 @@ networkstatisticspanel.number_of_public_files=Totalt antal tillg\u00e4ngliga fil
 networkstatisticspanel.online_users=Anv\u00e4ndare nline
 networkstatisticspanel.public_folder_count=Antal offentliga foldrar (du ej \u00e4r med i)
 networkstatisticspanel.public_folders_size=Total storlek av alla tillg\u00e4ngliga filer
+##networkstatisticspanel.reconnection_queue_size=Nodes in reconnection queue
 
 nodeinfo.error=Kan inte beg\u00e4ra nod-information
 nodeinfo.requesting=Beg\u00e4r nod-information...
@@ -588,6 +607,9 @@ preferences.dialog.bindDescr=Gr\u00e4nssnittbeskrivning
 preferences.dialog.colortheme=F\u00e4rgtema
 preferences.dialog.createdesktopshortcuts=Skapa genv\u00e4g p\u00e5 skrivbordet
 ##preferences.dialog.debugReports=Enable debug reports
+##preferences.dialog.deleteemptydirs=Delete empty directories
+##preferences.dialog.deltasync=Use delta sync
+##preferences.dialog.deltasync.tooltip=Synchronize only changed file-parts.
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=
 preferences.dialog.dialogs.check_for_program_updates=S\u00f6k efter PowerFolder program uppdateringar
 preferences.dialog.dialogs.title=Dialoger
@@ -705,7 +727,7 @@ publicfolders.size=Storlek
 quickinfo.download.active={0} aktiva nedladdningar
 quickinfo.download.completed={0} nedladdningar nyligen klara
 quickinfo.download.title=Nedladdningsstatus
-##quickinfo.folder.downloads_recently_completed=, {0} Downloads recently completed
+##quickinfo.folder.downloads_recently_completed={0} Downloads recently completed
 quickinfo.folder.is_in_sync=Foldern \u00e4r synkroniserad
 quickinfo.folder.is_synchronizing=Foldern synkroniseras...
 quickinfo.folder.number_of_files_and_size={0} fil(er), {1}
@@ -880,33 +902,36 @@ title.public.folder=Offentlig folder
 title.public.folders=Offentliga Foldrar
 title.search.users=Hitta v\u00e4nner
 
-##transfer.problem.broken.download=The transfer download was broken for {0}
-##transfer.problem.broken.upload=\=The transfer upload was broken for {0}
-##transfer.problem.file.not.found.exception=There was a FileNotFoundException for {0}\: {1}
-##transfer.problem.general.exception=There was an Exception for {0}\: {1}
-##transfer.problem.illegal.chunk=Received illegal chunk for {0}\: {1}
-##transfer.problem.invalid.part=Received invalid part request {0}
-##transfer.problem.io.exception=Unable to read/write {0}\: {1}
-##transfer.problem.md5.error=There was an MD5-Hash error for {0}
-##transfer.problem.old.upload=Already received download request for {0} from {1}
-##transfer.problem.temp.file.delete=Unable to removed broken tempfile for {0} {1}
-##transfer.problem.temp.file.open=Unable to create/open tempfile for {0} {1}
-##transfer.problem.temp.file.write=Unable to write to tempfile for {0} {1}
+##transfer.problem.broken.download=The transfer download was broken
+##transfer.problem.broken.upload=The transfer upload was broken
+##transfer.problem.file.not.found.exception=There was a FileNotFoundException\: {0}
+##transfer.problem.general.exception=There was an Exception\: {0}
+##transfer.problem.illegal.chunk=Received illegal chunk\: {0}
+##transfer.problem.invalid.part=Received invalid part request\: {0}
+##transfer.problem.io.exception=Unable to read/write\: {0}
+##transfer.problem.md5.error=There was an MD5-Hash error
+##transfer.problem.old.upload=Already received download request from {0}
+##transfer.problem.temp.file.delete=Unable to removed broken tempfile {0}
+##transfer.problem.temp.file.open=Unable to create/open tempfile {0}
+##transfer.problem.temp.file.write=Unable to write to tempfile {0}
 ##transfer.problem.title=File Transfer Problem
-##transfer.problem.transfer.exception=There was a TransferException for {0}\: {1}
+##transfer.problem.transfer.exception=There was a TransferException\: {0}
 
 transfers.completed=klar
+##transfers.copying=Copying data
 transfers.eta=Klar om
 transfers.from=Fr\u00e5n
-##transfers.hashing=Hashing
+##transfers.hashing=Delta sync
 transfers.kbs={0} KB/s
 transfers.local=lokal
 transfers.pending=V\u00e4ntar
 transfers.progress=F\u00f6rlopp
 transfers.queued=i k\u00f6
+##transfers.remotehashing=Waiting for requests
 transfers.requested=beg\u00e4rd
 transfers.searching=S\u00f6ker...
 transfers.to=Till
+##transfers.verifying=Verifying sync
 
 unignorefile.description=Fil(er) kommer att laddas ner/delas igen
 unignorefile.key=A
@@ -979,7 +1004,7 @@ wizard.syncpcspanel.selecttarget=Var v\u00e4nlig ange lokal m\u00e5l-mapp
 ##wizard.syncpcspanel.takepart=Take part in a mirror
 ##wizard.syncpcspanel.title=Mirror
 ##wizard.webservice.enteraccount=Please enter your account data to login to the Online Storage
-##wizard.webservice.learnmore=What is the PowerFolder WebService?
+##wizard.webservice.learnmore=What is the PowerFolder Online Storage?
 ##wizard.webservice.login=Online Storage Login
 ##wizard.webservice.mirrorchoosefolder=Choose a folder to be backed up by the PowerFolder Online Storage
 ##wizard.webservice.mirrorsetup=Backup Folder by Online Storage
