--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -137,6 +137,14 @@ dialog.binderror=Der Netzwerk Port is bereits belegt
 dialog.connect.connecting=Verbinde
 dialog.connect.connecting_to=Verbinde zu {0}...
 dialog.connection_problem=Verbindungsproblem
+##dialog.customsync.autodownloadfromfriends=Autodownload from friends
+##dialog.customsync.autodownloadfromother=Autodownload from others
+##dialog.customsync.minutesbetweenscans=(Maximum) minutes until change detection 
+##dialog.customsync.syncdeletionwithfriends=Synchronize deletion with friends
+##dialog.customsync.syncdeletionwithothers=Synchronize deletion with others
+##dialog.customsync.syncprofilescombo=Default synchronization profile
+##dialog.customsync.text=Select default and / or customize synchronization profile
+##dialog.customsync.title=Choose synchronisation profile
 dialog.fatalerror.title=Schwerer Fehler
 dialog.synchronization.choose=Bitte die Synchronisationoption ausw\u00e4hlen
 dialog.synchronization.receive_changes=\u00c4nderunge erhalten
@@ -147,7 +155,6 @@ dialog.synchronization.title=Projekt synchronisation
 dialog.unable_to_connect_to_address=Kann nicht zu {0} verbinden
 dialog.unable_to_connect_to_member=Kann nicht zu {0} verbinden
 dialog.unable_to_open_port=Kann Netwerk Port {0} nicht \u00f6ffnen, PowerFolder k\u00f6nnte bereits laufen
-dialog.updatecheck.developmentversion.noUpdateAvailable=Diese version (Entwicklungsversion) is aktuell
 dialog.updatecheck.developmentversion.optionrestart=Neustart
 dialog.updatecheck.developmentversion.text=\nEine neue Entwicklungsversion wurde heruntergeladen\n\n - Buildzeiten -\nDiese version\: {0}\nNeue version\: {1}\n\nBitte starten Sie PowerFolder jetzt neu\n
 dialog.updatecheck.developmentversion.title=Neue Entwicklungsversion
@@ -298,6 +305,7 @@ folderjoin.warning.notempty.text=Der von Ihnen angegebene Ort des Folders '{0}' 
 folderjoin.warning.notempty.title=Lokales Verzeichnis nicht leer
 
 folderleave.description=Folder verlassen (Stops sharing und downloading datai). 
+##folderleave.dialog.delete=Delete meta-data
 folderleave.dialog.sync_warning=Der Folder wird gerade synchronisiert\!
 folderleave.dialog.text=Wollen Sie den Folder {0} wirklich verlassen ?
 folderleave.dialog.title=Folder {0} verlassen ?
@@ -314,8 +322,16 @@ folderpanel.filestab.dropfile_duplicate_dialog.title=Datei bereits vorhanden
 ##folderpanel.hometab.choose_local_folder.title=Choose local folder
 ##folderpanel.hometab.confirm_local_folder_move.text=Move local folder from\n{0}\nto\n{1}?
 ##folderpanel.hometab.confirm_local_folder_move.title=Move local folder
+##folderpanel.hometab.folder_not_empty=Folder {0} is not empty.\nDo you want to continue?
+##folderpanel.hometab.folder_not_empty.title=Folder not empty
 folderpanel.hometab.local_folder_location=Lokales Verzeichnis
 folderpanel.hometab.local_size=Lokale Gr\u00f6sse
+##folderpanel.hometab.move_content=Will you want to move the contents of the current folder to the new folder?
+##folderpanel.hometab.move_content.title=Move folder contents
+##folderpanel.hometab.move_error.other=There was an error moving the folder\:\n{0}
+##folderpanel.hometab.move_error.other_temp=There was an error moving the folder\:\n{0}\n\nSome of your files may be in\n{1}
+##folderpanel.hometab.move_error.temp=Could not create temporary folder
+##folderpanel.hometab.move_error.title=Error moving folder contents
 folderpanel.hometab.number_of_available_files_at_other_members=Verf\u00fcgbare Dateien bei anderen Mitgliedern
 folderpanel.hometab.number_of_local_files_in_folder=Anzahl der lokalen Datein 
 folderpanel.hometab.public_folder=\u00d6ffentlich
@@ -324,6 +340,8 @@ folderpanel.hometab.synchronisation_eta=Synchronisation fertig in
 folderpanel.hometab.synchronisation_percentage=Synchronisation
 folderpanel.hometab.title=Info
 folderpanel.hometab.total_size=Gr\u00f6sse (Total)
+##folderpanel.hometab.working.description=The folder is being moved
+##folderpanel.hometab.working.title=Moving folder
 folderpanel.settingstab.add_a_pattern.example=beispiel/*.jpg
 folderpanel.settingstab.add_a_pattern.text=Geben Sie ein Muster f\u00fcr den Ausschluss von Dateien an
 folderpanel.settingstab.add_a_pattern.title=Muster hinzuf\u00fcgen
@@ -520,10 +538,11 @@ navtree.title=Navigation
 ##networkstatisticspanel.local_folder_count=Number of local folders (joined)
 ##networkstatisticspanel.local_folders_size=Total size of all local files
 ##networkstatisticspanel.number_of_local_files=Total number of local files
-##networkstatisticspanel.number_of_public_files=Total number of available files 
+##networkstatisticspanel.number_of_public_files=Total number of available files
 ##networkstatisticspanel.online_users=Online users
 ##networkstatisticspanel.public_folder_count=Number of public folders (not joined)
 ##networkstatisticspanel.public_folders_size=Total size of all available files
+##networkstatisticspanel.reconnection_queue_size=Nodes in reconnection queue
 
 nodeinfo.error=Information \u00fcber den Benutzer nicht m\u00f6glich
 nodeinfo.requesting=Erwarte Benutzerinformationen...
@@ -588,6 +607,9 @@ preferences.dialog.bindDescr=Beschreibung
 preferences.dialog.colortheme=PowerFolder Thema
 preferences.dialog.createdesktopshortcuts=Link auf dem Desktop anlegen
 ##preferences.dialog.debugReports=Enable debug reports
+##preferences.dialog.deleteemptydirs=Delete empty directories
+##preferences.dialog.deltasync=Use delta sync
+##preferences.dialog.deltasync.tooltip=Synchronize only changed file-parts.
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Meldung wenn ein Benutzer einen Folder betritt, der nicht auf der Freundesliste steht. 
 preferences.dialog.dialogs.check_for_program_updates=Nach PowerFolder Programmupdates suchen
 preferences.dialog.dialogs.title=Dialoge
@@ -603,14 +625,14 @@ preferences.dialog.dyndnsLoginPanel=Benutzerdaten
 preferences.dialog.dyndnsPassword=Passwort
 preferences.dialog.dyndnsSettingsTabbedPane=DynDns Einstellungen
 preferences.dialog.dyndnsUpdateButton=Jetzt aktualisieren
-##preferences.dialog.dyndnsUpdateError=DynDns service returned an error\: 
+##preferences.dialog.dyndnsUpdateError=DynDns service returned an error\:
 ##preferences.dialog.dyndnsUpdateTitle=DynDns Updater
 ##preferences.dialog.dyndnsUpdateUnknowError=DynDns service returned an unknown warning.
-##preferences.dialog.dyndnsUpdateWarning=DynDns service returned a warning\: 
+##preferences.dialog.dyndnsUpdateWarning=DynDns service returned a warning\:
 preferences.dialog.dyndnsUpdatedIP=Dyndns IP
 preferences.dialog.dyndnsUserName=Benutzername
 ##preferences.dialog.dyndnsmanager.nomatch.text=The entered DynDns does not match to this host.\nAre you sure you want to continue with it?
-##preferences.dialog.dyndnsmanager.nomatch.title=The entered DynDns does not match to this host. 
+##preferences.dialog.dyndnsmanager.nomatch.title=The entered DynDns does not match to this host.
 ##preferences.dialog.errorExpandButton=>>
 ##preferences.dialog.errorShrinkButton=<<
 ##preferences.dialog.findPort=Find port
@@ -705,7 +727,7 @@ publicfolders.size=Gr\u00f6\u00dfe
 quickinfo.download.active={0} aktive Download(s)
 quickinfo.download.completed={0} Download(s) k\u00fcrzlich fertiggestellt
 quickinfo.download.title=Download \u00dcbersicht
-##quickinfo.folder.downloads_recently_completed=, {0} Downloads recently completed
+##quickinfo.folder.downloads_recently_completed={0} Downloads recently completed
 quickinfo.folder.is_in_sync=Folder ist synchronisiert
 quickinfo.folder.is_synchronizing=Folder wird synchronisiert...
 quickinfo.folder.number_of_files_and_size={0} Dateien, {1}
@@ -880,22 +902,23 @@ title.public.folder=\u00d6ffentlicher Folder
 title.public.folders=\u00d6ffentliche Folder
 title.search.users=Benutzer suchen
 
-##transfer.problem.broken.download=The transfer download was broken for {0}
-##transfer.problem.broken.upload=\=The transfer upload was broken for {0}
-##transfer.problem.file.not.found.exception=There was a FileNotFoundException for {0}\: {1}
-##transfer.problem.general.exception=There was an Exception for {0}\: {1}
-##transfer.problem.illegal.chunk=Received illegal chunk for {0}\: {1}
-##transfer.problem.invalid.part=Received invalid part request {0}
-##transfer.problem.io.exception=Unable to read/write {0}\: {1}
-##transfer.problem.md5.error=There was an MD5-Hash error for {0}
-##transfer.problem.old.upload=Already received download request for {0} from {1}
-##transfer.problem.temp.file.delete=Unable to removed broken tempfile for {0} {1}
-##transfer.problem.temp.file.open=Unable to create/open tempfile for {0} {1}
-##transfer.problem.temp.file.write=Unable to write to tempfile for {0} {1}
+##transfer.problem.broken.download=The transfer download was broken
+##transfer.problem.broken.upload=The transfer upload was broken
+##transfer.problem.file.not.found.exception=There was a FileNotFoundException\: {0}
+##transfer.problem.general.exception=There was an Exception\: {0}
+##transfer.problem.illegal.chunk=Received illegal chunk\: {0}
+##transfer.problem.invalid.part=Received invalid part request\: {0}
+##transfer.problem.io.exception=Unable to read/write\: {0}
+##transfer.problem.md5.error=There was an MD5-Hash error
+##transfer.problem.old.upload=Already received download request from {0}
+##transfer.problem.temp.file.delete=Unable to removed broken tempfile {0}
+##transfer.problem.temp.file.open=Unable to create/open tempfile {0}
+##transfer.problem.temp.file.write=Unable to write to tempfile {0}
 ##transfer.problem.title=File Transfer Problem
-##transfer.problem.transfer.exception=There was a TransferException for {0}\: {1}
+##transfer.problem.transfer.exception=There was a TransferException\: {0}
 
 transfers.completed=vollst\u00e4ndig
+##transfers.copying=Copying data
 transfers.eta=verbleibend
 transfers.from=Von
 transfers.hashing=Berechne Hashes
@@ -904,9 +927,11 @@ transfers.local=lokal
 transfers.pending=Ausstehend
 transfers.progress=Fortschritt
 transfers.queued=in der Warteschlange
+##transfers.remotehashing=Waiting for requests
 transfers.requested=angefordert
 transfers.searching=Suche...
 transfers.to=Zu
+##transfers.verifying=Verifying sync
 
 unignorefile.description=Datei(en) werden werden wieder verf\u00fcgbar gemacht (von der Ausschlussliste entfernt)
 unignorefile.key=V
