--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -88,9 +88,9 @@ chatpanel.member_disconnected_at_time={0} \u4e8e {1} \u65ad\u5f00\u8fde\u63a5
 chatpanel.member_joined_folder_at_time={0} \u4e8e {1} \u52a0\u5165\u6587\u4ef6\u5939
 chatpanel.member_left_folder_at_time={0} \u4e8e {1} \u79bb\u5f00\u6587\u4ef6\u5939
 
-##clearcompleteddownloads.description=Clears the list of the recently completed downloads
-##clearcompleteddownloads.key=c
-##clearcompleteddownloads.name=Cleanup
+clearcompleteddownloads.description=\u5c06\u6700\u8fd1\u5b8c\u6210\u7684\u4e0b\u8f7d\u9879\u76ee\u4ece\u5217\u8868\u4e2d\u79fb\u9664
+clearcompleteddownloads.key=c
+clearcompleteddownloads.name=\u6e05\u9664
 
 clearrecentdownloads.description=\u6e05\u9664\u6700\u8fd1\u7684\u95ee\u9898\u5217\u8868
 clearrecentdownloads.key=c
@@ -137,14 +137,14 @@ dialog.binderror=\u4e0d\u80fd\u7ed1\u5b9a\u7aef\u53e3\!
 dialog.connect.connecting=\u8fde\u63a5
 dialog.connect.connecting_to=\u8fde\u63a5\u5230 {0} \u2026\u2026
 dialog.connection_problem=\u8fde\u63a5\u95ee\u9898
-##dialog.customsync.autodownloadfromfriends=Autodownload from friends
-##dialog.customsync.autodownloadfromother=Autodownload from others
-##dialog.customsync.minutesbetweenscans=(Maximum) minutes until change detection 
-##dialog.customsync.syncdeletionwithfriends=Synchronize deletion with friends
-##dialog.customsync.syncdeletionwithothers=Synchronize deletion with others
-##dialog.customsync.syncprofilescombo=Default synchronization profile
-##dialog.customsync.text=Select default and / or customize synchronization profile
-##dialog.customsync.title=Choose synchronisation profile
+dialog.customsync.autodownloadfromfriends=\u4ece\u597d\u53cb\u5904\u81ea\u52a8\u4e0b\u8f7d
+dialog.customsync.autodownloadfromother=\u4ece\u5176\u4ed6\u4eba\u81ea\u52a8\u4e0b\u8f7d
+dialog.customsync.minutesbetweenscans=\u68c0\u6d4b\u53d8\u5316\u7684\uff08\u6700\u5927\uff09\u5206\u949f\u6570
+dialog.customsync.syncdeletionwithfriends=\u540c\u6b65\u597d\u53cb\u7684\u5220\u9664\u64cd\u4f5c
+dialog.customsync.syncdeletionwithothers=\u540c\u6b65\u5176\u5b83\u4eba\u7684\u5220\u9664\u64cd\u4f5c
+dialog.customsync.syncprofilescombo=\u4f7f\u7528\u9ed8\u8ba4\u540c\u6b65\u914d\u7f6e\u6587\u4ef6
+dialog.customsync.text=\u9009\u62e9\u9ed8\u8ba4\u548c/\u6216\u81ea\u5b9a\u4e49\u540c\u6b65\u914d\u7f6e\u6587\u4ef6
+dialog.customsync.title=\u9009\u62e9\u540c\u6b65\u914d\u7f6e\u6587\u4ef6
 dialog.fatalerror.title=\u53d1\u751f\u4e25\u91cd\u9519\u8bef
 dialog.synchronization.choose=\u8bf7\u9009\u62e9\u540c\u6b65\u65f6\u7684\u884c\u4e3a
 dialog.synchronization.receive_changes=\u63a5\u6536\u6539\u53d8
@@ -305,7 +305,7 @@ folderjoin.warning.notempty.text=\u6587\u4ef6\u5939 '{0}' \u672c\u5730\u526f\u67
 folderjoin.warning.notempty.title=\u672c\u5730\u6839\u76ee\u5f55\u975e\u7a7a
 
 folderleave.description=\u79bb\u5f00\u8be5\u6587\u4ef6\u5939\uff08\u505c\u6b62\u5171\u4eab\u548c\u4e0b\u8f7d\u6570\u636e\uff09
-##folderleave.dialog.delete=Delete meta-data
+folderleave.dialog.delete=\u5220\u9664\u5143\u6570\u636e
 folderleave.dialog.sync_warning=\u6b64\u6587\u4ef6\u5939\u6b63\u5728\u540c\u6b65\!
 folderleave.dialog.text=\u79bb\u5f00\u6587\u4ef6\u5939 {0} ?
 folderleave.dialog.title=\u79bb\u5f00\u6587\u4ef6\u5939 {0} ?
@@ -322,16 +322,16 @@ folderpanel.filestab.dropfile_duplicate_dialog.title=\u6587\u4ef6\u5df2\u7ecf\u5
 folderpanel.hometab.choose_local_folder.title=\u9009\u62e9\u672c\u5730\u6587\u4ef6\u5939
 folderpanel.hometab.confirm_local_folder_move.text=\u4ece\n{0}\n\u79fb\u52a8\u672c\u5730\u6587\u4ef6\u5939\u5230\n{1}?
 folderpanel.hometab.confirm_local_folder_move.title=\u79fb\u52a8\u672c\u5730\u6587\u4ef6\u5939
-##folderpanel.hometab.folder_not_empty=Folder {0} is not empty.\nDo you want to continue?
-##folderpanel.hometab.folder_not_empty.title=Folder not empty
+folderpanel.hometab.folder_not_empty=\u6587\u4ef6\u5939 {0} \u4e0d\u662f\u7a7a\u7684\u3002\n\u662f\u5426\u7ee7\u7eed\uff1f
+folderpanel.hometab.folder_not_empty.title=\u6587\u4ef6\u5939\u4e0d\u662f\u7a7a\u7684
 folderpanel.hometab.local_folder_location=\u672c\u5730\u6587\u4ef6\u5939\u4f4d\u7f6e
 folderpanel.hometab.local_size=\u672c\u5730\u5927\u5c0f
-##folderpanel.hometab.move_content=Will you want to move the contents of the current folder to the new folder?
-##folderpanel.hometab.move_content.title=Move folder contents
-##folderpanel.hometab.move_error.other=There was an error moving the folder\:\n{0}
-##folderpanel.hometab.move_error.other_temp=There was an error moving the folder\:\n{0}\n\nSome of your files may be in\n{1}
-##folderpanel.hometab.move_error.temp=Could not create temporary folder
-##folderpanel.hometab.move_error.title=Error moving folder contents
+folderpanel.hometab.move_content=\u662f\u5426\u79fb\u52a8\u5f53\u524d\u6587\u4ef6\u5939\u7684\u5185\u5bb9\u5230\u65b0\u6587\u4ef6\u5939\u5417\uff1f
+folderpanel.hometab.move_content.title=\u79fb\u52a8\u6587\u4ef6\u5939\u5185\u5bb9
+folderpanel.hometab.move_error.other=\u79fb\u52a8\u6587\u4ef6\u5939\u65f6\u53d1\u751f\u9519\u8bef\:\n{0}
+folderpanel.hometab.move_error.other_temp=\u79fb\u52a8\u6587\u4ef6\u5939\u65f6\u53d1\u751f\u9519\u8bef\:\n{0}\n\n\u6709\u4e00\u4e9b\u6587\u4ef6\u53ef\u80fd\u5728\n{1}
+folderpanel.hometab.move_error.temp=\u4e0d\u80fd\u521b\u5efa\u4e34\u65f6\u6587\u4ef6\u5939
+folderpanel.hometab.move_error.title=\u79fb\u52a8\u6587\u4ef6\u5939\u5185\u5bb9\u51fa\u9519
 folderpanel.hometab.number_of_available_files_at_other_members=\u5176\u4ed6\u7528\u6237\u5904\u7684\u6709\u6548\u6587\u4ef6\u6570
 folderpanel.hometab.number_of_local_files_in_folder=\u6587\u4ef6\u5939\u7684\u672c\u5730\u6587\u4ef6\u6570
 folderpanel.hometab.public_folder=\u516c\u5171
@@ -340,8 +340,8 @@ folderpanel.hometab.synchronisation_eta=\u540c\u6b65 ETA
 folderpanel.hometab.synchronisation_percentage=\u540c\u6b65\u7387
 folderpanel.hometab.title=\u5e38\u89c4
 folderpanel.hometab.total_size=\u603b\u5927\u5c0f
-##folderpanel.hometab.working.description=The folder is being moved
-##folderpanel.hometab.working.title=Moving folder
+folderpanel.hometab.working.description=\u6b63\u5728\u79fb\u52a8\u6587\u4ef6\u5939
+folderpanel.hometab.working.title=\u79fb\u52a8\u6587\u4ef6\u5939
 folderpanel.settingstab.add_a_pattern.example=\u793a\u4f8b/*.jpg
 folderpanel.settingstab.add_a_pattern.text=\u8f93\u5165\u6837\u5f0f\u6765\u5ffd\u7565\u4e0d\u8fdb\u884c\u540c\u6b65\u7684\u6587\u4ef6
 folderpanel.settingstab.add_a_pattern.title=\u6dfb\u52a0\u5ffd\u7565\u6837\u5f0f
@@ -542,7 +542,7 @@ networkstatisticspanel.number_of_public_files=\u6709\u6548\u6587\u4ef6\u603b\u65
 networkstatisticspanel.online_users=\u5728\u7ebf\u7528\u6237
 networkstatisticspanel.public_folder_count=\u516c\u5f00\u6587\u4ef6\u5939\uff08\u672a\u52a0\u5165\u7684\uff09\u603b\u6570
 networkstatisticspanel.public_folders_size=\u6709\u6548\u6587\u4ef6\u603b\u5927\u5c0f
-##networkstatisticspanel.reconnection_queue_size=Nodes in reconnection queue
+networkstatisticspanel.reconnection_queue_size=\u8282\u70b9\u5728\u91cd\u65b0\u8fde\u63a5\u961f\u5217\u4e2d
 
 nodeinfo.error=\u4e0d\u80fd\u83b7\u53d6\u7528\u6237\u4fe1\u606f
 nodeinfo.requesting=\u83b7\u53d6\u7528\u6237\u4fe1\u606f\u2026\u2026
@@ -607,9 +607,9 @@ preferences.dialog.bindDescr=\u8be6\u7ec6\u4fe1\u606f
 preferences.dialog.colortheme=\u98ce\u683c
 preferences.dialog.createdesktopshortcuts=\u521b\u5efa\u684c\u9762\u5feb\u6377\u65b9\u5f0f
 preferences.dialog.debugReports=\u542f\u7528\u8c03\u8bd5\u62a5\u544a
-##preferences.dialog.deleteemptydirs=Delete empty directories
-##preferences.dialog.deltasync=Use delta sync
-##preferences.dialog.deltasync.tooltip=Synchronize only changed file-parts.
+preferences.dialog.deleteemptydirs=\u5220\u9664\u7a7a\u6587\u4ef6\u5939
+preferences.dialog.deltasync=\u4f7f\u7528Delta\u540c\u6b65
+preferences.dialog.deltasync.tooltip=\u53ea\u540c\u6b65\u4fee\u6539\u7684\u6587\u4ef6\u90e8\u5206\u3002
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=\u5982\u679c\u7528\u6237\u6210\u4e3a\u6587\u4ef6\u5939\u6210\u5458\uff0c\u63d0\u793a\u662f\u5426\u6dfb\u52a0\u4e3a\u597d\u53cb
 preferences.dialog.dialogs.check_for_program_updates=\u68c0\u67e5PowerFolder\u7a0b\u5e8f\u5347\u7ea7\u3002
 preferences.dialog.dialogs.title=\u5bf9\u8bdd\u6846
@@ -918,7 +918,7 @@ transfer.problem.title=\u6587\u4ef6\u4f20\u8f93\u51fa\u9519
 transfer.problem.transfer.exception={0}\: {1}\u5b58\u5728\u4e00\u4e2a\u4f20\u8f93\u5f02\u5e38\uff08TransferException\uff09
 
 transfers.completed=\u5b8c\u6210
-##transfers.copying=Copying data
+transfers.copying=\u6b63\u5728\u590d\u5236\u6570\u636e
 transfers.eta=ETA
 transfers.from=\u6e90
 transfers.hashing=\u6b63\u5728\u8ba1\u7b97\u54c8\u5e0c\u503c
@@ -927,11 +927,11 @@ transfers.local=\u672c\u5730
 transfers.pending=Pending
 transfers.progress=\u8fdb\u7a0b
 transfers.queued=\u961f\u5217
-##transfers.remotehashing=Waiting for requests
+transfers.remotehashing=\u6b63\u5728\u7b49\u5f85\u8bf7\u6c42
 transfers.requested=\u5df2\u8bf7\u6c42
 transfers.searching=\u6b63\u5728\u67e5\u627e\u2026\u2026
 transfers.to=\u76ee\u6807
-##transfers.verifying=Verifying sync
+transfers.verifying=\u9a8c\u8bc1\u540c\u6b65\u4e2d
 
 unignorefile.description=\u6587\u4ef6\u5c06\u518d\u6b21\u4e0b\u8f7d/\u5171\u4eab
 unignorefile.key=U
